# field_lib

./: .gitignore  Cargo.toml  README.md
crates/app/: Cargo.toml
crates/app/src/: logging.rs  runtime.rs
crates/ffi/: Cargo.toml
crates/ffi/src/: lib.rs
crates/field_core/: Cargo.toml  README.md
crates/field_core/src/: logging.rs
crates/field_core/src/runtime/: auth_session.rs  key_management.rs  mod.rs  nostr.rs  trade_listing.rs
crates/field_core/tests/: key_management.rs  logging_error.rs  no_nostr_runtime.rs
crates/field_ffi_swift/: Cargo.toml
crates/field_ffi_swift/src/: lib.rs
crates/field_wasm/: Cargo.toml  README.md
crates/field_wasm/src/: lib.rs
