[workspace]
members = [
    "crates/field_core",
    "crates/field_ffi_swift",
    "crates/field_wasm",
]
resolver = "2"

[workspace.package]
version = "0.1.0-alpha.1"
edition = "2024"
rust-version = "1.92.0"
license = "AGPL-3.0"
repository = "https://github.com/rad-roots-labs/field_lib"
homepage = "https://radroots.org"
readme = "README.md"

[workspace.dependencies]
radroots_field_core = { path = "crates/field_core", version = "0.1.0-alpha.1", default-features = false }
radroots_field_ffi_swift = { path = "crates/field_ffi_swift", version = "0.1.0-alpha.1" }
radroots_field_wasm = { path = "crates/field_wasm", version = "0.1.0-alpha.1" }
radroots_core = { path = "../radroots/crates/core", version = "0.1.0-alpha.2", default-features = false }
radroots_events = { path = "../radroots/crates/events", version = "0.1.0-alpha.2", default-features = false }
radroots_events_codec = { path = "../radroots/crates/events_codec", version = "0.1.0-alpha.2", default-features = false }
radroots_identity = { path = "../radroots/crates/identity", version = "0.1.0-alpha.2", default-features = false }
radroots_log = { path = "../radroots/crates/log", version = "0.1.0-alpha.2", default-features = false }
radroots_net_core = { package = "radroots_net", path = "../radroots/crates/net", version = "0.1.0-alpha.2", default-features = false }
radroots_nostr = { path = "../radroots/crates/nostr", version = "0.1.0-alpha.2", default-features = false }
radroots_trade = { path = "../radroots/crates/trade", version = "0.1.0-alpha.2", default-features = false }

chrono = { version = "0.4" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
thiserror = { version = "1" }
tokio = { version = "1" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
uniffi = { version = "0.29.4" }
uniffi_build = { version = "0.29.4" }
wasm-bindgen = { version = "0.2" }
