[package]
name = "radroots_field_core"
version = "0.1.0-alpha.1"
edition.workspace = true
authors = ["triesap npub1tr33s4tj2le2kk9yzhfphdtss26gyn8kv7savnnjhj794nqp333q8e7grr"]
rust-version.workspace = true
license.workspace = true
description = "core field runtime primitives for Radroots field surfaces"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/radroots_field_core"
readme.workspace = true

[lib]
crate-type = ["rlib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[features]
default = ["rt", "nostr-client"]
rt = ["radroots_net_core/rt"]
nostr-client = [
    "radroots_net_core/nostr-client",
    "dep:radroots_core",
    "dep:radroots_events_codec",
    "dep:radroots_trade",
    "dep:radroots_identity",
    "dep:radroots_nostr",
]
directories = ["radroots_net_core/directories"]
fs-persistence = ["radroots_net_core/fs-persistence"]

[dependencies]
radroots_log = { workspace = true }
radroots_events = { workspace = true }
radroots_net_core = { workspace = true, features = ["std"] }
radroots_core = { workspace = true, optional = true }
radroots_identity = { workspace = true, optional = true, default-features = false, features = ["std"] }
radroots_events_codec = { workspace = true, features = ["serde_json"], optional = true }
radroots_trade = { workspace = true, features = ["std", "serde", "serde_json"], optional = true }
radroots_nostr = { workspace = true, features = ["events"], optional = true }
chrono = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uniffi = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
