[package]
name = "radroots_field_ffi_swift"
version.workspace = true
edition.workspace = true
authors = ["triesap npub1tr33s4tj2le2kk9yzhfphdtss26gyn8kv7savnnjhj794nqp333q8e7grr"]
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["staticlib", "cdylib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[[bin]]
name = "uniffi-bindgen"
path = "bin/uniffi-bindgen.rs"

[build-dependencies]
uniffi_build = { workspace = true }

[dependencies]
radroots_field_core = { workspace = true }
uniffi = { workspace = true, features = ["cli"] }
